syntax = "proto3";
package mayachain;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain";

import "mayachain/v1/x/mayachain/types/type_pool.proto";
import "mayachain/v1/x/mayachain/types/type_chain_contract.proto";
import "mayachain/v1/x/mayachain/types/type_network_fee.proto";
import "mayachain/v1/x/mayachain/types/msg_swap.proto";
import "mayachain/v1/x/mayachain/types/type_streaming_swap.proto";
import "mayachain/v1/x/mayachain/types/type_network.proto";
import "mayachain/v1/x/mayachain/types/type_pol.proto";
import "mayachain/v1/x/mayachain/types/type_reserve_contributor.proto";
import "mayachain/v1/x/mayachain/types/type_vault.proto";
import "mayachain/v1/x/mayachain/types/type_tx_out.proto";
import "mayachain/v1/x/mayachain/types/type_node_account.proto";
import "mayachain/v1/x/mayachain/types/type_observed_tx.proto";
import "mayachain/v1/x/mayachain/types/type_liquidity_provider.proto";
import "mayachain/v1/x/mayachain/types/type_mayaname.proto";
import "gogoproto/gogo.proto";

message lastChainHeight {
  string chain = 1;
  int64 height = 2;
}

message mimir{
  string key = 1;
  int64 value = 2;
}
message GenesisState {
  repeated types.Pool pools = 1 [(gogoproto.nullable) = false];
  repeated types.LiquidityProvider liquidity_providers = 2 [(gogoproto.castrepeated) = "gitlab.com/mayachain/mayanode/x/mayachain/types.LiquidityProviders", (gogoproto.nullable) = false];
  repeated types.ObservedTxVoter observed_tx_in_voters = 3 [(gogoproto.castrepeated) = "gitlab.com/mayachain/mayanode/x/mayachain/types.ObservedTxVoters", (gogoproto.nullable) = false];
  repeated types.ObservedTxVoter observed_tx_out_voters = 4 [(gogoproto.castrepeated) = "gitlab.com/mayachain/mayanode/x/mayachain/types.ObservedTxVoters", (gogoproto.nullable) = false];
  repeated types.TxOut tx_outs = 5 [(gogoproto.nullable) = false];
  repeated types.NodeAccount node_accounts = 6 [(gogoproto.castrepeated) = "gitlab.com/mayachain/mayanode/x/mayachain/types.NodeAccounts", (gogoproto.nullable) = false];
  repeated types.Vault vaults = 7 [(gogoproto.castrepeated) = "gitlab.com/mayachain/mayanode/x/mayachain/types.Vaults", (gogoproto.nullable) = false];
  uint64 reserve = 8;
  reserved 9;
  int64 last_signed_height = 10;
  repeated lastChainHeight last_chain_heights = 11 [(gogoproto.nullable) = false];
  repeated types.ReserveContributor reserve_contributors = 12 [(gogoproto.castrepeated) = "gitlab.com/mayachain/mayanode/x/mayachain/types.ReserveContributors", (gogoproto.nullable) = false];
  types.Network network = 13 [(gogoproto.nullable) = false];
  reserved 14,15,16,17,18;
  repeated types.MsgSwap msg_swaps = 19 [(gogoproto.nullable) = false];
  repeated types.NetworkFee network_fees = 20 [(gogoproto.nullable) = false];
  reserved 21;
  repeated types.ChainContract chain_contracts = 22 [(gogoproto.nullable) = false];
  repeated types.MAYAName mayanames = 23 [(gogoproto.nullable) = false];
  repeated mimir mimirs = 24 [(gogoproto.nullable) = false];
  int64 store_version = 25;
  repeated types.BondProviders bond_providers = 26 [(gogoproto.nullable) = false];
  types.ProtocolOwnedLiquidity POL = 27 [(gogoproto.nullable) = false];
  uint64 maya_fund = 28;
  uint64 asgard = 29;
  repeated types.StreamingSwap streaming_swaps = 30 [(gogoproto.nullable) = false];
}
