syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";

import "mayachain/v1/common/common.proto";
import "gogoproto/gogo.proto";

message MsgUnBond {
  common.Tx tx_in = 1 [(gogoproto.nullable) = false];
  bytes node_address = 2  [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string bond_address = 5 [(gogoproto.casttype) = "gitlab.com/mayachain/mayanode/common.Address"];
  bytes signer = 7  [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  bytes bond_provider_address = 8  [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  common.Asset asset = 9 [(gogoproto.nullable) = false];
  string units = 10 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
}
